force-app/main/default/objects/Lead/fields/CampanhaPrimeiraConversao__c.field-meta.xml
<CustomField>
    <fullName>CampanhaPrimeiraConversao__c</fullName>
    <label>Campanha Primeira Conversao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>