force-app/main/default/objects/Lead/fields/CampanhaUltimaConversao__c.field-meta.xml
<CustomField>
    <fullName>CampanhaUltimaConversao__c</fullName>
    <label>Campanha Ultima Conversao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>