force-app/main/default/objects/Lead/fields/Contatado_em_30_min__c.field-meta.xml
<CustomField>
    <fullName>Contatado_em_30_min__c</fullName>
    <formula>IF(((UNIXTIMESTAMP(Data_Contatado__c) - UNIXTIMESTAMP(CreatedDate)) / 60) &lt;= 30, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contatado em 30 min</label>
    <type>Checkbox</type>
</CustomField>