force-app/main/default/objects/Lead/fields/Convertido__c.field-meta.xml
<CustomField>
    <fullName>Convertido__c</fullName>
    <formula>IF(TEXT(Status) == &apos;Convertido em Opp&apos;, &apos;Sim&apos;, &apos;Não&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convertido</label>
    <type>Text</type>
</CustomField>