force-app/main/default/objects/Lead/fields/Criativo__c.field-meta.xml
<CustomField>
    <fullName>Criativo__c</fullName>
    <label>Criativo</label>
    <type>TextArea</type>
</CustomField>