force-app/main/default/objects/Lead/fields/Data_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Data_Convertido__c</fullName>
    <label>Data Convertido</label>
    <type>DateTime</type>
</CustomField>