force-app/main/default/objects/Lead/fields/Data_de_criacao_formatada__c.field-meta.xml
<CustomField>
    <fullName>Data_de_criacao_formatada__c</fullName>
    <formula>IF(
DAY(DATEVALUE(CreatedDate)) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(DATEVALUE(CreatedDate))),
TEXT(DAY(DATEVALUE(CreatedDate)))
)
+ &quot;/&quot; +
IF(
MONTH(DATEVALUE(CreatedDate)) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(DATEVALUE(CreatedDate))),
TEXT(MONTH(DATEVALUE(CreatedDate)))
)
+ &quot;/&quot; +
TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de criação (formatada)</label>
    <type>Text</type>
</CustomField>