force-app/main/default/objects/Lead/fields/DataPrimeiraConversao__c.field-meta.xml
<CustomField>
    <fullName>DataPrimeiraConversao__c</fullName>
    <label>Data Primeira Conversao</label>
    <length>100</length>
    <type>Text</type>
</CustomField>