force-app/main/default/objects/Lead/fields/DataUltimaConversao__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaConversao__c</fullName>
    <label>Data Ultima Conversao</label>
    <length>100</length>
    <type>Text</type>
</CustomField>