force-app/main/default/objects/Lead/fields/Dias_em_aberto__c.field-meta.xml
<CustomField>
    <fullName>Dias_em_aberto__c</fullName>
    <formula>IF(
AND(
TEXT(Status) != &apos;Convertido em Opp&apos;,
TEXT(Status) != &apos;Perdido&apos;
),
TODAY() - DATEVALUE(CreatedDate),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias em aberto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>