force-app/main/default/objects/Lead/fields/Evento_relacionado__c.field-meta.xml
<CustomField>
    <fullName>Evento_relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento relacionado</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>