force-app/main/default/objects/Lead/fields/Flag_2h_em_aberto__c.field-meta.xml
<CustomField>
    <fullName>Flag_2h_em_aberto__c</fullName>
    <formula>IF((ISPICKVAL(Status,&apos;Em Aberto&apos;) &amp;&amp; (UNIXTIMESTAMP(NOW()) - UNIXTIMESTAMP(CreatedDate)) &gt; 7200),true, false
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag 2h em aberto</label>
    <type>Checkbox</type>
</CustomField>