force-app/main/default/objects/Lead/fields/Flag_description_preenchido__c.field-meta.xml
<CustomField>
    <fullName>Flag_description_preenchido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag description preenchido</label>
    <type>Checkbox</type>
</CustomField>