force-app/main/default/objects/Lead/fields/Interesse__c.field-meta.xml
<CustomField>
    <fullName>Interesse__c</fullName>
    <label>Interesse</label>
    <type>TextArea</type>
</CustomField>