force-app/main/default/objects/Lead/fields/Nome_da_Campanha__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Campanha__c</fullName>
    <label>Nome da Campanha</label>
    <type>TextArea</type>
</CustomField>