force-app/main/default/objects/Lead/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Número</label>
    <type>AutoNumber</type>
</CustomField>