force-app/main/default/objects/Lead/fields/Quais_marcas_utiliza__c.field-meta.xml
<CustomField>
    <fullName>Quais_marcas_utiliza__c</fullName>
    <label>Quais marcas utiliza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>