force-app/main/default/objects/Lead/fields/Regioes__c.field-meta.xml
<CustomField>
    <fullName>Regioes__c</fullName>
    <inlineHelpText>Informação de Região selecionada no OMNICHAT.
Pode diferir da região do endereço.</inlineHelpText>
    <label>Regiões</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regioes</valueSetName>
    </valueSet>
</CustomField>