force-app/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(TEXT(Status) = &apos;Em aberto&apos;, &apos;1 - Em aberto&apos;,
IF(TEXT(Status) = &apos;Contatado&apos;, &apos;2 - Contatado&apos;,
IF(TEXT(Status) = &apos;Qualificado&apos;, &apos;3 - Qualificado&apos;,
IF(TEXT(Status) = &apos;Não qualificado&apos;, &apos;4 - Não qualificado&apos;,
IF(TEXT(Status) = &apos;Perdido&apos;, &apos;5 - Perdido&apos;,
IF(TEXT(Status) = &apos;Convertido em Opp&apos;, &apos;6 - Convertido em Opp&apos;,
&apos;&apos;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status*</label>
    <type>Text</type>
</CustomField>