force-app/main/default/objects/Lead/fields/Subfase__c.field-meta.xml
<CustomField>
    <fullName>Subfase__c</fullName>
    <label>Subfase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COTAÇÃO ENVIADA</fullName>
            </value>
            <value>
                <fullName>ENCAMINHADO PARA O CONSULTOR</fullName>
            </value>
            <value>
                <fullName>ENCAMINHADO PARA OUTRO DEPARTAMENTO</fullName>
            </value>
            <value>
                <fullName>OUTRA REGIÃO</fullName>
            </value>
            <value>
                <fullName>OUTRO</fullName>
            </value>
            <value>
                <fullName>CASO CRIADO</fullName>
                <isActive>false</isActive>
                <label>CASO CRIADO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>