force-app/main/default/objects/Lead/fields/Suborigem__c.field-meta.xml
<CustomField>
    <fullName>Suborigem__c</fullName>
    <label>sub-origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSTAGRAM</fullName>
            </value>
            <value>
                <fullName>FACEBOOK</fullName>
            </value>
            <value>
                <fullName>LINKEDIN</fullName>
            </value>
            <value>
                <fullName>SITE</fullName>
            </value>
            <value>
                <fullName>WHATSAPP</fullName>
            </value>
            <value>
                <fullName>RD STATION</fullName>
            </value>
            <value>
                <fullName>GOOGLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>