force-app/main/default/objects/Lead/validationRules/Comercial_sem_cargo.validationRule-meta.xml
<ValidationRule>
    <fullName>Comercial_sem_cargo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	IsConverted == true,
	Company != null,
	Title == null
)</errorConditionFormula>
    <errorDisplayField>Title</errorDisplayField>
    <errorMessage>O cargo deve ser informado antes da conversão, para lead de conta comercial.</errorMessage>
</ValidationRule>