force-app/main/default/objects/Lead/validationRules/Comercial_sem_cnpj.validationRule-meta.xml
<ValidationRule>
    <fullName>Comercial_sem_cnpj</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	IsConverted == true,
	Company != null,
	CNPJ__c == null
)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>O CNPJ deve ser informado antes da conversão, para lead de conta comercial.</errorMessage>
</ValidationRule>