force-app/main/default/objects/Lead/validationRules/Convertido.validationRule-meta.xml
<ValidationRule>
    <fullName>Convertido</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
Acao_Interna__c == false,
TEXT(Status) == &apos;Convertido em Opp&apos;
)</errorConditionFormula>
    <errorMessage>Converta o Lead em Opp para mudar o status</errorMessage>
</ValidationRule>