force-app/main/default/objects/Lead/validationRules/Pessoal_sem_cpf.validationRule-meta.xml
<ValidationRule>
    <fullName>Pessoal_sem_cpf</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	IsConverted == true,
	Company == null,
	CPF__c == null
)</errorConditionFormula>
    <errorDisplayField>CPF__c</errorDisplayField>
    <errorMessage>O CPF deve ser informado antes da conversão, para lead de conta pessoal.</errorMessage>
</ValidationRule>