force-app/main/default/objects/Lead/validationRules/Sem_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Sem_email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	IsConverted == true,
	Email == null
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>O email deve ser informado antes da conversão.</errorMessage>
</ValidationRule>