force-app/main/default/objects/Lead/validationRules/Sem_nomes.validationRule-meta.xml
<ValidationRule>
    <fullName>Sem_nomes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	IsConverted == true,
	OR(
		FirstName == null,
		LastName == null
	)
)</errorConditionFormula>
    <errorMessage>Preencha ao menos o primeiro e o ultimo nome antes da conversão.</errorMessage>
</ValidationRule>