force-app/main/default/objects/Lead/validationRules/Sem_tipo.validationRule-meta.xml
<ValidationRule>
    <fullName>Sem_tipo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	IsConverted == true,
	ISBLANK(TEXT(Tipo__c))
)</errorConditionFormula>
    <errorDisplayField>Tipo__c</errorDisplayField>
    <errorMessage>O tipo deve ser informado antes da conversão.</errorMessage>
</ValidationRule>