force-app/main/default/objects/Lead/listViews/Leads_em_aberto.listView-meta.xml
<ListView>
    <fullName>Leads_em_aberto</fullName>
    <columns>FULL_NAME</columns>
    <columns>Nome_da_Campanha__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Em aberto</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>HospDev,Willyan</value>
    </filters>
    <label>Leads em aberto</label>
</ListView>