force-app/main/default/objects/Lead/listViews/Leads_n_o_lidos.listView-meta.xml
<ListView>
    <fullName>Leads_n_o_lidos</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Interesse__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Não qualificado,Contatado,Qualificado,Convertido em Opp</value>
    </filters>
    <label>Leads não lidos</label>
</ListView>