force-app/main/default/objects/Lead/listViews/Leads_qualificados.listView-meta.xml
<ListView>
    <fullName>Leads_qualificados</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Interesse__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Qualificado</value>
    </filters>
    <label>Leads qualificados</label>
</ListView>