force-app/main/default/objects/Lead/listViews/Todos_os_leads_2.listView-meta.xml
<ListView>
    <fullName>Todos_os_leads_2</fullName>
    <columns>FULL_NAME</columns>
    <columns>Nome_da_Campanha__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Suborigem__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os leads</label>
</ListView>